# WasmTreeDataset

./: Cargo.toml  LICENSE.md  README.md  package.json
benchmark/: evolution.txt  plots.ipynb
benchmark/data/: fillforeachwaskpack3size_query-rust_wrapped.csv  fillforeachwaskpack3size_query-sophia.csv  fillforeachwaskpack3size_query-sophia_A.csv  fillforeachwaskpack3size_query-sophia_array.csv  fillforeachwaskpack3size_query-sophia_full.csv  fillforeachwaskpack3size_query-sophia_full_A.csv  fillforeachwaskpack3size_query-sophia_js.csv  fillforeachwaskpack3size_query-sophia_js_A.csv  fillforeachwaskpack3size_query-sophia_js_array.csv  fillforeachwaskpack3size_query-sophia_js_full.csv  fillforeachwaskpack3size_query-sophia_js_graphy.csv  fillforeachwaskpack3size_query-sophia_js_lg.csv  fillforeachwaskpack3size_query-sophia_js_tree.csv  fillforeachwaskpack3size_query-sophia_lg.csv  fillforeachwaskpack3size_query-sophia_lg_A.csv  fillforeachwaskpack3size_query-sophia_tree.csv  fillforeachwaskpack3size_query-sophia_tree_A.csv  fillforeachwaskpack3size_query2-rust_wrapped.csv  fillforeachwaskpack3size_query2-sophia.csv  fillforeachwaskpack3size_query2-sophia_A.csv  fillforeachwaskpack3size_query2-sophia_array.csv  fillforeachwaskpack3size_query2-sophia_full.csv  fillforeachwaskpack3size_query2-sophia_full_A.csv  fillforeachwaskpack3size_query2-sophia_js.csv  fillforeachwaskpack3size_query2-sophia_js_A.csv  fillforeachwaskpack3size_query2-sophia_js_array.csv  fillforeachwaskpack3size_query2-sophia_js_full.csv  fillforeachwaskpack3size_query2-sophia_js_graphy.csv  fillforeachwaskpack3size_query2-sophia_js_lg.csv  fillforeachwaskpack3size_query2-sophia_js_tree.csv  (+62 more)
pkg/: wrappedtree.js
src/: btreeddataset.rs  lib.rs
test/: LICENSE.md  Store.js  WrappedDataset.js  WrappedDatasetCore.js  test.js
wasm-tree-backend/: Cargo.toml  LICENSE  README.md  buildpkg.py
wasm-tree-backend/src/: btreeddataset.rs  exportree.rs  lib.rs  quadforest.rs
wasm-tree-backend/tests/: web.rs
wasm-tree-frontend/: .gitignore  CHANGELOG.md  README.md  alternative.js  index.js  index.ts  indexer.js  package.json  termidmap.js  tsconfig.json
wasm-tree-frontend/lib/: alternative.ts  (+1 more)
(+6 files in other folders)
