[package]
name = "wasm-tree-backend"
version = "0.2.0"
authors = ["Julian Bruyat <bruyat.ju@live.fr>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/BruJu/WasmTreeDataset/tree/master/wasm-tree-backend"
description = "Backend for the Wasm Tree library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
identifier_forest = { git = "https://github.com/BruJu/wasmify-sophia/", rev = "4bde1797a0df78a78157282f0280d4738080be31" }

wasm-bindgen = "=0.2.65"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
