[package]
name = "wasm-tree-backend"
version = "0.2.0"
authors = ["Julian Bruyat <bruyat.ju@live.fr>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/BruJu/WasmTreeDataset/tree/master/wasm-tree-backend"
description = "Backend for the Wasm Tree library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
identifier_forest = { git = "https://github.com/BruJu/wasmify-sophia/", rev = "f9ea6314bb93b62c39fae4f9aab3ed0bd90e5654" }

wasm-bindgen = "=0.2.65"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
